# ATLAS

./: .gitignore  LICENSE  README.md  announcement.md  pyproject.toml  requirements.txt  streamlit_app.py
atlas/: cli.py  config.py  orchestrator.py
docs/: case-study-mirofish.md
evals/: reaction_golden.jsonl
examples/: messages.yaml  sample-announcement.md  sample-reaction-report.md
scripts/: simulate_week.py
tests/: test_actions_fill_creates_task_complete.py  test_actions_fill_interactive_select.py  test_actions_fill_rejects_invalid_pair.py  test_actions_propose_skips_invalid_candidate.py  test_agent_context.py  test_agents.py  test_agents_cli.py  test_alerts_storage.py  test_audience_forecast_storage.py  test_board_meeting.py  test_board_meeting_report_contains_sections.py  test_board_meeting_speak_dry_run_shows_chunk_suffixes.py  test_chunk_text_respects_max_chars.py  test_cli_actions_flow.py  test_cli_approve_request_more_info_marks_executed.py  test_cli_board_meeting_speak_dry_run.py  test_cli_board_meeting_speak_head_missing_errors.py  test_cli_board_meeting_speak_single_head_dry_run.py  test_cli_predict_audience.py  test_config.py  test_db_path.py  test_doctor.py  test_elevenlabs_accept_header_for_wav.py  test_elevenlabs_client_request_mock.py  test_email_triage.py  test_evals.py  test_executor_task_complete.py  test_head_merges_worker_actions.py  test_hourly_plan.py  test_llm_layer.py  test_manifest_builder_shape.py  test_markdown.py  test_mirofish_orchestration.py  test_mobile_server.py  test_orchestrator_deterministic_no_llm.py  test_org_agent.py  (+20 more)
(+72 files in other folders)
