[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS personal operating company assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.6,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# Optional: the Anthropic provider (ATLAS_LLM_PROVIDER=anthropic). The OpenAI /
# local-model path uses stdlib urllib and needs no extra install.
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
atlas = "atlas.cli:main"

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
